--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.0'
 
     compile 'com.github.meikoz:basic:2.0.7'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 }
