--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "me.racofix.eyes"
+        applicationId "me.racofix.open"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
