--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,9 +18,6 @@ android {
         }
     }
 
-    repositories {
-        maven { url "https://jitpack.io" }
-    }
 }
 
 dependencies {
@@ -28,6 +25,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
 
-    compile 'com.github.meikoz:basic:2.0.7'
+    compile 'com.racofix.basic:core:1.0.1'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 }
