--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
 
-    compile 'com.racofix.basic:core:1.0.1'
+//    compile 'com.racofix.basic:core:1.0.1'
+    compile 'com.meikoz.basic:core:1.0.4'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 }
